--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/6ff343259b.js" crossorigin="anonymous"></script>
 
-    <title>E-commkerce site by Altaf</title>
+    <title>E-commerce site by Altaf</title>
 </head>
 <body>
     <div class="container">
